Fix overlap issue

--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -17,7 +17,6 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
 
 	img {
 		width: 100vw;
